--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
+@import 'styles/custom';
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -25,6 +26,8 @@ $custom-material-theme: mat-light-theme($custom-material-primary, $custom-materi
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($custom-material-theme);
+
+// @include custom-menu-theme($custom-material-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
